Added favicon link

--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
 	<meta name="author" content="Jakub Pawlina">
 	<meta name="keywords" content="smartphone, Айгруша 12 Pro, Айгруша, смартфон, премьера">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<!-- Favicon -->
+	<link rel="shortcut icon" href="favicon.ico">
 	<!-- Custom styles -->
 	<link rel="stylesheet" href="css/style.css">
 	<link rel="stylesheet" href="css/media.css">
